--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Etch-a-Sketch</title>
+
+    <link href="styles/reset.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
   </head>
   <body>
   
@@ -10,19 +13,18 @@
         const body = document.querySelector("body");
         const container = document.createElement("div");
         container.style.display = "grid";
-        container.style.gridTemplateRows = "repeat(16, 50px)";
-        container.style.gridTemplateColumns = "repeat(16, 50px)";
+        container.style.gridTemplateRows = "repeat(16, 30px)";
+        container.style.gridTemplateColumns = "repeat(16, 30px)";
         container.style.gridRowGap = "5px";
         container.style.gridColumnGap = "5px";
 
+        let squares = [];
         for (let i = 0; i < 256; i++) {
             const square = document.createElement("div");
-            square.style.backgroundColor = "blue";
-            square.style.width = "50px";
-            square.style.height = "50px";
+            square.classList.add("square");
+            squares.push(square);
             container.appendChild(square);
         }
-
         body.appendChild(container);
 
     </script>
