--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
   
     <script>
 
-        function onHover(square) {
-            console.log(square);
+        function onHover(e) {
             this.classList.add("hover");
-            console.log(this);
+        }
+
+        function makeNewGrid(e) {
+            console.log(e);
+            while(container.hasChildNodes()) {
+                container.removeChild(container.firstChild);
+            }
         }
 
         const body = document.querySelector("body");
         const container = document.createElement("div");
         container.classList.add("grid");
-        
+
         let squares = [];
         for (let i = 0; i < 256; i++) {
             const square = document.createElement("div");
@@ -37,6 +42,8 @@
         const button = document.createElement("button");
         button.textContent = "New Grid";
         body.insertBefore(button, container);
+
+        button.addEventListener("click", makeNewGrid);
 
     </script>
   </body>
