Fixed bug occurring when new grid automatically defaulted to white mode despite being in rainbow mode

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 grid.appendChild(square);
             }
             squares.forEach(square => {
-                square.addEventListener('mouseover', onHover);
+                if (rainbowMode) 
+                    square.addEventListener('mouseover', onRainbowHover);
+                else square.addEventListener('mouseover', onHover);
             });
         }
 
